--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "https://ruakusa.github.io/"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "ConfusionMatrix-VGG19.png"
   name             : "Kanglin Xu"
   pronouns         : # example: "she/her"  
   bio              : "Welcome, All"
